# gpo-assistant

./: .cursorignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  check_bot_response.py  docker-compose.yml  env.example  init_db.py  launch_bot.py  pyproject.toml  quick_cb.py  quick_poll.py  requirements.txt  shift_237_export.json  shift_261_export.json  shift_fields_output.json  start_bot.bat  start_bot.ps1  temp_check_placeholders.py  temp_check_test_doc.py  temp_extract_generated.py  temp_extract_template.py  temp_flatten_debug.py  temp_inspect_docxtpl.py  temp_list_placeholders.py  temp_list_placeholders2.py  temp_read_pdf.py  temp_run_lpa.py  temp_simple_render.py  test_bot_connection.py  test_db.py  test_lpa_quick.py  test_output.txt  tmp_check.py  tmp_check_pdf.py  tmp_get_resource.py  tmp_list_userfields.py  (+2 more)
app/: __init__.py  bitrix_field_map.py  config.py  db.py  main.py  models.py  scheduler.py  schemas.py  session.py
docs/: BITRIX_FIELDS_SETUP.md  BITRIX_INTEGRATION_REPORT.md  BOT_ANALYSIS.md  BOT_IS_RUNNING.md  BOT_LAUNCHED.md  BOT_LAUNCH_GUIDE.md  BOT_NOT_RESPONDING.md  BOT_READY_WITH_23_OBJECTS.md  BOT_RESTARTED.md  BOT_SILENT_ISSUE.md  BOT_STATUS.md  DATA_STRUCTURE.md  DEBUG_START.md  DIAGNOSTIC_SUMMARY.md  ENUM_REFACTORING_REPORT.md  FINAL_ENUM_REFACTORING_REPORT.md  FINAL_REPORT_491.md  FINAL_TESTING_GUIDE.md  FIX_SUMMARY.md  LPA_BITRIX_JSON_IMPLEMENTATION.md  LPA_CHECKLIST.md  LPA_IMPLEMENTATION_COMPLETE.md  LPA_SEARCH_ANALYSIS.md  MANUAL_TEST_CHECKLIST.md  QUICK_START_LPA.md  REFACTORING_SUMMARY.md  ROOT_CAUSE_ANALYSIS.md  SETUP_BOT.md  START_BOT.md  SYNC_BITRIX_INSTRUCTIONS.md  TESTING_INSTRUCTIONS.md  TESTING_LOGS.md  TESTING_READY.md  architecture.md
migrations/: env.py
scripts/: add_bitrix_fields.py  add_meta_to_plan.py  backfill_plan.py  check_doc_placeholders.py  check_enum_fields.py  check_enum_values.py  check_objects_db.py  check_pdf_field.py  check_plan_meta.py  check_resource_enum_ids.py  check_shift.py  check_shift_enum.py  check_shift_fields.py  check_shift_local_db.py  (+30 more)
(+100 files in other folders)
